<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <CheckBox
        android:id="@+id/cb_upper_case"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/upper_case"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <CheckBox
        android:id="@+id/cb_lower_case"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lower_case"
        android:layout_below="@+id/cb_upper_case"
        android:layout_centerHorizontal="true" />
    <CheckBox
        android:id="@+id/cb_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/number"
        android:layout_below="@+id/cb_lower_case"
        android:layout_centerHorizontal="true" />
    <CheckBox
        android:id="@+id/cb_special_case"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/special_case"
        android:layout_below="@+id/cb_number"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cb_special_case"
        android:layout_centerHorizontal="true">
        <TextView
            android:textSize="18sp"
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_quantity"
            android:layout_alignTop="@+id/et_quantity"
            android:layout_alignBottom="@+id/et_quantity" />
        <EditText
            android:id="@+id/et_quantity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_toEndOf="@+id/textView2"
            android:importantForAutofill="no" />
    </RelativeLayout>
</RelativeLayout>