<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:gravity="start"
        android:id="@+id/et_text"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/text"
        android:layout_above="@+id/et_password" />
    <EditText
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:id="@+id/et_password"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:layout_above="@+id/ll_buttons"
        android:layout_toStartOf="@+id/btn_generate_password" />
    <Button
        android:id="@+id/btn_generate_password"
        android:background="@drawable/key_variant"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_above="@+id/ll_buttons"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_alignParentBottom="true">
        <Button
            android:textColor="@color/black"
            android:id="@+id/btn_encrypt"
            android:background="@drawable/buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/str_encrypt"
            android:layout_weight="2" />
        <Button
            android:textColor="@color/black"
            android:id="@+id/btn_decrypt"
            android:background="@drawable/buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/str_decrypt"
            android:layout_weight="2" />
        <ImageButton
            android:id="@+id/btn_share"
            android:background="@drawable/share_variant"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/str_share"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>